[package]
name = "apdl-parser"
version = "0.1.0"
edition = "2024"

description = "Parser for ANSYS APDL text listings (NLIST/ELIST/DLIST/PRNSOL)"
license = "MIT OR Apache-2.0"

readme = "README.md"
repository = "https://github.com/indraine/apdl-parser"
homepage = "https://github.com/indraine/apdl-parser"
documentation = "https://docs.rs/apdl-parser"

exclude = [
    "/files/*",
    "/Cargo.toml.orig",
    "/.cargo_vcs_info.json",
]

[dependencies]
anyhow = "1.0.98"
